Change /my/friends to return only friends
